--- a/CameraXUI/app/src/main/res/layout/activity_camera_test.xml
+++ b/CameraXUI/app/src/main/res/layout/activity_camera_test.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15dp"
-    tools:context=".MainActivity">
+    tools:context=".CameraTestActivity">
 
     <ImageView
         android:id="@+id/imageView"
